--- a/node-server/package.json
+++ b/node-server/package.json
@@ -5,9 +5,11 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "dev": "ts-node-dev src/index.ts",
-    "start": "node dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "ts-node-dev src/index.ts & (npx sequelize-cli db:seed:undo:all && npx sequelize-cli db:seed:undo:all)",
+    "start": "node dist/index.js ",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "seed": "npx sequelize-cli db:seed:all",
+    "undo-seed": "npx sequelize-cli db:seed:undo:all"
   },
   "keywords": [],
   "author": "",
