docs(Root): Updating the README

--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
-PORT_DEVELOPMENT=3000
+NODE_BACKEND_PORT_DEVELOPMENT=3001
+NODE_BACKEND_URL=http://localhost:3001
 
 POSTGRES_DOCKER_PORT=5432
+POSTGRES_DOCKER_USERNAME='postgres'
 POSTGRES_DOCKER_PASSWORD='postgres'
 POSTGRES_DOCKER_DB_NAME='video-creators'
