--- a/node-server/package.json
+++ b/node-server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "dev": "ts-node-dev src/index.ts & (npx sequelize-cli db:seed:undo:all && npx sequelize-cli db:seed:undo:all)",
+    "dev": "ts-node-dev src/index.ts",
     "start": "node dist/index.js ",
     "test": "echo \"Error: no test specified\" && exit 1",
     "seed": "npx sequelize-cli db:seed:all",
